| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 2.0
	- Version 2.0.0

Developer Version
	- 1.9.0 Development

Building Steps: 4183



 Version 1.9.0 Development
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: 

 - changed: DataContainer Classes changed to the correct PHP5-Class-Design.
 - changed: Deleted all PHP4 constuctors iun all classes.
 - changed: Massive cleanup of the source code, removed many deprecated functions,
            cleanup many PHP4 specific code.
 - changed: Better search page, replace the search functions into the search class.
 - changed: Guestbook config now as object and only loaded in the guestbook extension.
 - changed: Relocated all module configuration settings into the modules
 - changed: 

 - added: SEO format 3 (.html-format) has now the template variable.
 - added: 
 



############################################################################################





Version 1.6
	- Version 1.6.0

Developer Version
	- 1.6.0 Development / Stable
	- 1.6.1 Stable
	- 1.6.2 Stable

Building Steps: 3850



 Version 1.6.2 Stable
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: 

 - changed: Imagegallery imagelist option (thumbnail view) changed to set the amount of
            thumbnails per row.
 - changed: tinyMCE updated from 2.0.6.1 to 2.1.3.
 - changed: 

 - added: tinyMCE language support added (currently only english and german).
 - added: 



 
 Version 1.6.1 Stable
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: Fixed a bug which replace the http:// of a image link in content data if seo is