@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 4183</build>
+	<build>Build 4190</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>29.01.2008 - 14:53</release_date>
+	<release_date>30.01.2008 - 09:56</release_date>
 	<toenda_copyright>2003 - 2008</toenda_copyright>
 </version>
